# dcim

./: .gitignore  .oxfmtrc.json  .prettierignore  .prettierrc  AGENTS.md  README.md  lefthook.yml  next.config.mjs  oxfmt.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  worker-configuration.d.ts  wrangler.jsonc
.github/workflows/: build.yml  check.yml  ci.yml  deploy.yml
cli/: pyproject.toml
cli/src/dcim/: __init__.py  _client.py  _config.py  _errors.py
cli/src/dcim/_commands/: __init__.py  _login.py  _upload.py
migrations/: 001_init.sql  002_add_caption.sql
scripts/: pushenv.py
