[project]
name = "dcim"
version = "1.0.0"
license = "MIT"
authors = [{ name = "Priyanshu Dangare", email = "hello@aspiz.uk" }]
requires-python = ">=3.14"
dependencies = [
  "httpx>=0.28.1",
  "msgspec>=0.21.1",
  "pillow>=12.2.0",
  "rich-click>=1.9.7",
  "tomli-w>=1.2.0",
]

[project.scripts]
dcim = "dcim:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"
